--- a/public/assets/css/main/app.css
+++ b/public/assets/css/main/app.css
@@ -1997,8 +1997,8 @@ progress {
 }
 .form-control:focus {
     background-color: #fff;
-    border-color: #a1afdf;
-    box-shadow: 0 0 0 0.25rem rgba(67, 94, 190, 0.25);
+    border-color: #dfd1a1;
+    box-shadow: 0 0 0 0.25rem rgba(201, 153, 56, 0.25);
     color: #607080;
     outline: 0;
 }
@@ -2891,12 +2891,12 @@ fieldset:disabled .btn {
     --bs-btn-bg: #ffb03e;
     --bs-btn-border-color: #ffb03e;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #3950a2;
-    --bs-btn-hover-border-color: #364b98;
+    --bs-btn-hover-bg: #d07c07;
+    --bs-btn-hover-border-color: #d07c07;
     --bs-btn-focus-shadow-rgb: 95, 118, 200;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #364b98;
-    --bs-btn-active-border-color: #32478f;
+    --bs-btn-active-bg: #d07c07;
+    --bs-btn-active-border-color: #d07c07;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: #ffb03e;
