Feature:livewire install

--- a/public/assets/css/main/app-dark.css
+++ b/public/assets/css/main/app-dark.css
@@ -1872,7 +1872,7 @@ body.theme-dark .form-control {
     -moz-appearance: none;
     appearance: none;
     background-clip: padding-box;
-    background-color: #1b1b29;
+    background-color: #1e1e1e;
     border: 1px solid #35354f;
     border-radius: 0.25rem;
     color: #c2c2d9;
@@ -1896,7 +1896,7 @@ body.theme-dark .form-control[type="file"]:not(:disabled):not([readonly]) {
     cursor: pointer;
 }
 body.theme-dark .form-control:focus {
-    background-color: #1b1b29;
+    background-color: #1e1e1e;
     border-color: #4b4b68;
     box-shadow: 0 0 0 0.25rem rgba(67, 94, 190, 0.25);
     color: #c2c2d9;
@@ -2059,7 +2059,7 @@ body.theme-dark .form-select {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background-color: #1b1b29;
+    background-color: #1e1e1e;
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3E%3C/svg%3E");
     background-position: right 0.75rem center;
     background-repeat: no-repeat;
@@ -7444,15 +7444,15 @@ body.theme-dark .dataTable-input:focus {
     outline: 0;
 }
 body.theme-dark .choices__inner {
-    background-color: #1b1b29;
+    background-color: #1e1e1e;
     border-color: #35354f;
 }
 body.theme-dark .choices__input {
-    background-color: #1b1b29 !important;
+    background-color: #1e1e1e !important;
     color: #fff;
 }
 body.theme-dark .choices__list {
-    background-color: #1b1b29;
+    background-color: #1e1e1e;
 }
 body.theme-dark
     .choices__list--dropdown
@@ -8403,12 +8403,12 @@ body.theme-dark .note-editing-area .note-editable {
     background-color: #fff;
 }
 body.theme-dark .dataTable-input {
-    background-color: #1b1b29;
+    background-color: #1e1e1e;
     border-color: #35354f;
     transition: all 0.2s ease-in-out;
 }
 body.theme-dark .dataTable-input:focus {
-    background-color: #1b1b29;
+    background-color: #1e1e1e;
     border-color: #4b4b68;
     color: #c2c2d9;
 }
